--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gerador de senha</title>
 </head>
 <body>
-    
-</body>
+
+</body> 
 </html>
+</body>
+    <img src="" alt="cadeado fechado">
+    <h2 class="titulo-principal">Gerador de senhas</h2>
+    <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+</body>
